# ATEC2026

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SETUP_STATUS.md  log.md  pyproject.toml
.omo/: boulder.json
.omo/drafts/: analyze-root-archives.md  b2w-flat-omni.md  fix-b2w-flat-omni-spawn.md  task-a-l0-26points.md  task-l0-26-points.md  taskd-finetune.md  taskd-flat-from-taska.md  tidy-project.md
.omo/evidence/: final-verification-b2w-flat-omni.txt  root-archive-analysis.md  task-1-analyze-root-archives.md  task-1-b2w-flat-omni-config.txt  task-2-analyze-root-archives.md  task-2-b2w-flat-omni-runner.txt  task-2-fix-b2w-flat-omni-spawn.txt  task-3-analyze-root-archives.md  task-3-b2w-flat-omni-registration.txt  task-3-fix-b2w-flat-omni-spawn.txt  task-4-analyze-root-archives.md  task-4-b2w-flat-omni-train-script.txt  task-4-fix-b2w-flat-omni-spawn.txt  task-5-b2w-flat-omni-export-script.txt  task-5-fix-b2w-flat-omni-spawn.txt  task-6-b2w-flat-omni-smoke.txt  task-6-fix-b2w-flat-omni-spawn.txt
.omo/plans/: analyze-root-archives.md  b2w-flat-omni.md  fix-b2w-flat-omni-spawn.md  task-l0-26-points.md  taskd-finetune.md  taskd-flat-from-taska.md  tidy-project.md
.omo/run-continuation/: ses_1033c2866ffeETzzR31eZ9BEId.json  ses_112d3bfa4ffe7t4JfG834LrcSr.json  ses_1894410f0ffews1QQtXrl68kUa.json  (+1 more)
docs/: workspace-runbook.md
notes/: ATEC2026_DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE.md
reports/: ATEC2026_TaskA_20260524_Issue_Report.html
scripts/: README.md  play_env.sh  train_env.sh  view_env.py  view_env.sh
submission/: Dockerfile  solution.py
(+83 files in other folders)
